--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -7,17 +7,17 @@
 
 {% block content %}
 
-<div class="row my-2 border-bottom border-primary">
+<div class="row gx-2 my-2 border-bottom border-primary">
     <div class="col-lg-4">{{ year_balance }}</div>
     <div class="col-lg-8">{{ year_expenses }}</div>
 </div>
 
-<div class="row my-2 border-bottom border-primary">
+<div class="row gx-2 my-2 border-bottom border-primary">
     <div class="col-lg-5">{{ chart_expenses }}</div>
     <div class="col-lg-7">{{ chart_balance }}</div>
 </div>
 
-<div class="row mt-4 mb-3">
+<div class="row my-4">
     <div class="col-lg-12">
         {% url 'bookkeeping:accounts_worth_new' as url_accounts %}
         <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_accounts }}"><i class="bi bi-plus"></i> Sąskaitų faktas</button>
@@ -31,7 +31,7 @@
 </div>
 
 <!-- accounts stats -->
-<div class="row mt-2">
+<div class="row gx-2">
     <div id="accounts_worth" class="col-lg-7">{{ accounts }}</div>
     <div class="col-lg-3">
         <div class="row">
@@ -71,12 +71,12 @@
 
 
 <!-- savings -->
-<div class="row mt-5">
+<div class="row mt-3">
     <div id="saving_worth" class="col-lg-12">{{ savings }}</div>
 </div>
 
 <!-- pensions -->
-<div class="row mt-5">
+<div class="row mt-3">
     <div id="pension_worth" class="col-lg-12">{{ pensions }}</div>
 </div>
 
