--- a/project/bookkeeping/templates/bookkeeping/summary.html
+++ b/project/bookkeeping/templates/bookkeeping/summary.html
@@ -6,13 +6,13 @@
 
 {% block content %}
 
-<div class="row mt-2">
+<div class="row my-2">
     <div class="col-lg-12">
         {% include 'bookkeeping/includes/chart_summary_balance.html' %}
     </div>
 </div>
 
-<div class="row mt-2">
+<div class="row my-2">
     <div class="col-lg-12">
         {% include 'bookkeeping/includes/chart_summary_salary.html' %}
     </div>
