--- a/project/savings/templates/savings/index.html
+++ b/project/savings/templates/savings/index.html
@@ -10,15 +10,15 @@
 {% url 'savings:savings_type_new' as url_savings_type_new %}
 {% url 'pensions:pensions_new' as url_pensions %}
 {% url 'pensions:pensions_type_new' as url_pensions_type_new %}
-<div class="row mt-1 px-2">
-    <div class="col-lg-8 px-1">
+<div class="row gx-2">
+    <div class="col-lg-8">
         <!-- Funds -->
         <div class="row my-2">
             <div class="col">
-                <h6 class="py-1 my-0">Fondai</h6>
+                <h6>Fondai</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_savings }}"><i class="bi bi-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row">
@@ -28,10 +28,10 @@
         <!-- Pensions -->
         <div class="row my-2">
             <div class="col">
-                <h6 class="py-1 my-0">Pensija, II pakopa</h6>
+                <h6>Pensija, II pakopa</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_pensions }}"><i class="bi bi-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_pensions }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row">
@@ -43,22 +43,22 @@
         <!-- Funds Types -->
         <div class="row my-2">
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_savings_type_new }}"><i class="bi bi-plus"></i> Fondą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_type_new }}"><i class="bi bi-plus"></i> Fondą</button>
             </div>
         </div>
         <div class="row">
-            <div id="ajax-content-categories" class="col-lg-12 px-2">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col-lg-12">{{ categories }}</div>
         </div>
         <!-- End Funds Types -->
 
         <!-- Pension Types -->
         <div class="row mt-4 mb-2">
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_pensions_type_new }}"><i class="bi bi-plus"></i> Pensijų fondą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_pensions_type_new }}"><i class="bi bi-plus"></i> Pensijų fondą</button>
             </div>
         </div>
         <div class="row">
-            <div id="pension-categories" class="col-lg-12 px-2">{{ pension_type }}</div>
+            <div id="pension-categories" class="col-lg-12">{{ pension_type }}</div>
         </div>
         <!-- End Pension Types -->
     </div>
