--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -5,16 +5,16 @@
 
 {% block content %}
 
-<div class="row mt-1 px-2">
-    <div class="col-lg-8 px-1">
+<div class="row gx-2">
+    <div class="col-lg-8">
         <!-- transactins between accounts -->
         <div class="row my-2">
             <div class="col">
-                <h6 class="py-1 my-0">Sąskaita &hArr; Sąskaita</h6>
+                <h6>Sąskaita &hArr; Sąskaita</h6>
             </div>
             <div class="col text-end">
                 {% url 'transactions:transactions_new' as url_transactions %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_transactions }}"><i class="bi bi-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_transactions }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row">
@@ -24,11 +24,11 @@
         <!-- close savings -->
         <div class="row my-2">
             <div class="col">
-                <h6 class="py-1 my-0">Fondas &rArr; Sąskaita</h6>
+                <h6>Fondas &rArr; Sąskaita</h6>
             </div>
             <div class="col text-end">
                 {% url 'transactions:savings_close_new' as url_savings_close %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_savings_close }}"><i class="bi bi-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_close }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row">
@@ -38,11 +38,11 @@
         <!-- change savings -->
         <div class="row my-2">
             <div class="col">
-                <h6 class="py-1 my-0">Fondas &hArr; Fondas</h6>
+                <h6>Fondas &hArr; Fondas</h6>
             </div>
             <div class="col text-end">
                 {% url 'transactions:savings_change_new' as url_savings_change %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_savings_change }}"><i class="bi bi-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_change }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row">
@@ -53,13 +53,13 @@
     <!-- left side -->
     <div class="col-lg-4">
         <div class="row my-2">
-            <div class="col px-2 text-end">
+            <div class="col text-end">
                 {% url 'accounts:accounts_new' as url_accounts %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_accounts }}"><i class="bi bi-plus"></i> Sąskaitą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_accounts }}"><i class="bi bi-plus"></i> Sąskaitą</button>
             </div>
         </div>
         <div class="row">
-            <div id="ajax-content-categories" class="col-lg-12 px-2">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col-lg-12">{{ categories }}</div>
         </div>
     </div>
 </div>
