--- a/project/plans/templates/plans/index.html
+++ b/project/plans/templates/plans/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="col-lg-2 text-end">
                 {% url 'plans:incomes_plan_new' as url_incomes_new %}
-                <button type="button" class="btn btn-sm btn-outline-success px-2 js-create" data-url="{% url 'plans:copy_plans' %}"><i class="bi bi-stickies"></i> Kopijuoti planus</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{% url 'plans:copy_plans' %}"><i class="bi bi-stickies"></i> Kopijuoti planus</button>
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes_new }}"><i class="bi bi-plus"></i>Įrašą</button>
             </div>
         </div>
