--- a/project/core/templates/core/includes/search_form.html
+++ b/project/core/templates/core/includes/search_form.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags %}
 
-<form novalidate method="post" id="search_form" class="row d-flex gx-2 align-items-center">
+<form novalidate method="post" id="search_form" class="row d-flex gx-1 align-items-center">
     {% csrf_token %}
     <div class="col align-self-start">
         {{ form.search|as_crispy_field }}
@@ -12,7 +12,8 @@
 
 <style>
     #search_btn {
-        padding: .2rem .5rem;
+        margin: 0!important;
+        padding: .25rem .5rem;
     }
 
     #div_id_search {
