--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -165,7 +165,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">{{ user.username }}</a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item btn-sm px-2" href="{% url 'users:logout' %}">Log out</a></li>
+            <li><a class="dropdown-item btn-sm" href="{% url 'users:logout' %}">Log out</a></li>
           </ul>
         </div>
       </nav>
