drinks image center vertically and horizontally

--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -48,8 +48,8 @@
         </div>
     </div>
 
-    <div class="col-lg-6">
-        <div class="text-center px-5 mx-5 my-3"><img src="{% static 'images/drinks_info.jpg' %}" width="80%"></div>
+    <div class="col-lg-6 d-flex">
+        <div class="text-center mx-auto align-self-center"><img src="{% static 'images/drinks_info.jpg' %}" width="100%"></div>
     </div>
 </div>
 
