--- a/project/drinks/templates/drinks/includes/compare_form.html
+++ b/project/drinks/templates/drinks/includes/compare_form.html
@@ -1,10 +1,10 @@
 {% load crispy_forms_tags %}
-<form novalidate method="post" id="compare_form" class="row d-flex px-2 gx-2 align-items-center">
+<form novalidate method="post" id="compare_form" class="row d-flex gx-1 align-items-center">
     {% csrf_token %}
-    <div class="col"></div>
-    <div class="col-sm-3 align-self-start">{{ form.year1|as_crispy_field }}</div>
-    <div class="col-sm-3 align-self-start">{{ form.year2|as_crispy_field }}</div>
-    <div class="col-sm-1 align-self-start"><input type="button" name="date_filter" value="Filter" class="btn btn-secondary btn-sm filter_click" data-url="{% url 'drinks:compare' %}"></div>
+    <div class="col align-self-start"></div>
+    <div class="col-3">{{ form.year1|as_crispy_field }}</div>
+    <div class="col-3 align-self-start">{{ form.year2|as_crispy_field }}</div>
+    <div class="col-auto align-self-start"><input type="button" name="date_filter" value="Filter" class="btn btn-secondary btn-sm filter_click" data-url="{% url 'drinks:compare' %}"></div>
 </form>
 
 <style>
