bg-warning -> alert alert-warning

--- a/project/books/templates/books/includes/books_list.html
+++ b/project/books/templates/books/includes/books_list.html
@@ -47,7 +47,7 @@
 
 {% else %}
 
-<div class="mx-auto bg-warning text-center py-2">
+<div class="mx-auto text-center alert alert-warning py-2">
     <b>{{ request.user.year|title }}</b> metais irašų nėra.
 </div>
 
