--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -75,7 +75,7 @@
 
 {% else %}
 
-<div class="mx-auto bg-warning text-center py-2">
+<div class="mx-auto text-center alert alert-warning py-2">
     {% if notice %}{{ notice|safe }}{% else %}<b>{{ request.user.year|title }}</b> metais įrašų nėra.{% endif %}
 </div>
 
