--- a/project/savings/templates/savings/includes/savings_list.html
+++ b/project/savings/templates/savings/includes/savings_list.html
@@ -40,7 +40,7 @@
 </table>
 
 {% else %}
-<div class="mx-auto bg-warning text-center py-2 mb-4">
+<div class="mx-auto text-center alert alert-warning py-2 mb-4">
     <b>{{ request.user.year|title }}</b> metais įrašų nėra.
 </div>
 {% endif %}
