--- a/project/transactions/templates/transactions/includes/table.html
+++ b/project/transactions/templates/transactions/includes/table.html
@@ -37,7 +37,7 @@
 
 {% else %}
 
-<div class="mx-auto bg-warning text-center py-2 mb-4">
+<div class="mx-auto text-center alert alert-warning py-2 mb-4">
     <b>{{ year|default_if_none:'xxxx'|safe }}</b> metais įrašų nėra.
 </div>
 
