--- a/project/incomes/templates/incomes/includes/incomes_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_list.html
@@ -39,7 +39,7 @@
 
 {% else %}
 
-<div class="mx-auto bg-warning text-center py-2">
+<div class="mx-auto text-center alert alert-warning py-2">
     <b>{{ request.user.year|title }}</b> metais įrašų nėra.
 </div>
 
