convert commas to dots in price and fee inputs

--- a/project/savings/templates/savings/includes/savings_form.html
+++ b/project/savings/templates/savings/includes/savings_form.html
@@ -1,3 +1,4 @@
-{% load form %}
+{% load form %}{% load static %}
 {% generic_form title='Taupymas' update_container='ajax-content' %}
 
+<script type="text/javascript" src="{% static 'js/alter_price.js' %}"></script>
