--- a/project/transactions/templates/transactions/includes/transactions_form.html
+++ b/project/transactions/templates/transactions/includes/transactions_form.html
@@ -1,4 +1,4 @@
-{% load form %}
+{% load form %}{% load static %}
 {% url 'accounts:load_to_account' as url_chained %}
 {% generic_form title='Pinigų pervedimas' update_container='transactions_list' chained_dropdown=url_chained %}
 
@@ -18,3 +18,5 @@
         });
     });
 </script>
+
+<script type="text/javascript" src="{% static 'js/alter_price.js' %}"></script>
