--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -13,8 +13,8 @@
     </div>
     <div class="col-lg-4">
         <div class="row">
-            <div style="display: none;" id='chart_expenses' class="col">{{ chart_expenses }}</div>
-            <div id='chart_targets' class="col">{{ chart_targets }}</div>
+            <div style="display: none;" id="chart_expenses" class="col">{{ chart_expenses }}</div>
+            <div id="chart_targets" class="col">{{ chart_targets }}</div>
         </div>
         <div class="row" id="info-row">
             <div class="col" id="info">{{ info }}</div>
