The type attribute is unnecessary for JavaScript resources.

--- a/project/counts/templates/counts/index.html
+++ b/project/counts/templates/counts/index.html
@@ -5,7 +5,7 @@
 {% block head %}
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
 <script src="https://code.highcharts.com/modules/heatmap.js"></script>
-<script type="text/javascript" src="{% static 'js/reload_stats.js' %}"></script>
+<script src="{% static 'js/reload_stats.js' %}"></script>
 {% endblock head %}
 
 
