--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -46,5 +46,5 @@
 
 {% include 'modal.html' %}
 
-<script type="text/javascript" src="{% static 'js/search.js' %}"></script>
+<script src="{% static 'js/search.js' %}"></script>
 {% endblock content %}
