--- a/project/pensions/templates/pensions/includes/pensions_form.html
+++ b/project/pensions/templates/pensions/includes/pensions_form.html
@@ -1,4 +1,4 @@
 {% load form %}{% load static %}
 {% generic_form title='Pensija' update_container='pension-content' %}
 
-<script type="text/javascript" src="{% static 'js/alter_price.js' %}"></script>
+<script src="{% static 'js/alter_price.js' %}"></script>
