--- a/project/transactions/templates/transactions/includes/transactions_form.html
+++ b/project/transactions/templates/transactions/includes/transactions_form.html
@@ -19,4 +19,4 @@
     });
 </script>
 
-<script type="text/javascript" src="{% static 'js/alter_price.js' %}"></script>
+<script src="{% static 'js/alter_price.js' %}"></script>
