--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{% static 'css/css-loader.css' %}">
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
 <script src="https://code.highcharts.com/modules/bullet.js"></script>
-<script type="text/javascript" src="{% static 'js/reload_stats.js' %}"></script>
+<script src="{% static 'js/reload_stats.js' %}"></script>
 {% endblock head %}
 
 
@@ -44,7 +44,7 @@
 {% endif %}
 
 {% include 'modal.html' %}
-<script type="text/javascript" src="{% static 'js/search.js' %}"></script>
+<script src="{% static 'js/search.js' %}"></script>
 <script>
     $(document).on('hidden.bs.modal', '#modal-form', function () {
         var url = `{% url 'books:reload_stats' %}`;
