--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -2,7 +2,7 @@
 
 {% if items %}
 
-<script type="text/javascript" src="{% static 'js/sticky-table-headers.js' %}"></script>
+<script src="{% static 'js/sticky-table-headers.js' %}"></script>
 <table class="table table-hover stats sticky-table">
     <thead class="thead-light">
         <tr class="top">
