--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/css-loader.css' %}">
-<script type="text/javascript" src="{% static 'js/reload_stats.js' %}"></script>
+<script src="{% static 'js/reload_stats.js' %}"></script>
 {% endblock head %}
 
 {% block content %}
@@ -100,5 +100,5 @@
     });
 
 </script>
-<script type="text/javascript" src="{% static 'js/search.js' %}"></script>
+<script src="{% static 'js/search.js' %}"></script>
 {% endblock content %}
