--- a/project/incomes/templates/incomes/includes/incomes_form.html
+++ b/project/incomes/templates/incomes/includes/incomes_form.html
@@ -1,4 +1,4 @@
 {% load form %}{% load static %}
 {% generic_form title='Pajamos' update_container='ajax-content' %}
 
-<script type="text/javascript" src="{% static 'js/alter_price.js' %}"></script>
+<script src="{% static 'js/alter_price.js' %}"></script>
