--- a/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
@@ -3,7 +3,7 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th colspan="7"><h1>Sąskaitos</h1></th>
+            <th colspan="7">Sąskaitos</th>
         </tr>
         <tr>
             <th class="text-start">Sąskaita</th>
