--- a/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
@@ -2,7 +2,7 @@
 <table class="table table-striped table-hover table-sm stats">
     <thead class="thead-light">
         <tr class="top">
-            <th colspan="5"><h1>Balansas</h1></th>
+            <th colspan="5">Balansas</th>
         </tr>
         <tr>
             <th width="80rem" class="text-start">{{ year|title }}</th>
