--- a/project/bookkeeping/templates/bookkeeping/includes/year_expenses.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/year_expenses.html
@@ -3,7 +3,7 @@
 <table class="table table-striped table-hover table-sm stats">
     <thead class="thead-light">
         <tr class="top">
-            <th colspan="{{ categories|length|add:1 }}"><h1>Išlaidų statistika</h1></th>
+            <th colspan="{{ categories|length|add:1 }}">Išlaidų statistika</th>
             <th class="bl top"></th>
         </tr>
         <tr>
