--- a/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
@@ -5,7 +5,7 @@
             <th colspan="5">Balansas</th>
         </tr>
         <tr>
-            <th width="80rem" class="text-start">{{ year|title }}</th>
+            <th class="text-start w5">{{ year|title }}</th>
             <th>Pajamos</th>
             <th>Išlaidos</th>
             <th>Balansas</th>
