--- a/project/bookkeeping/templates/bookkeeping/includes/year_expenses.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/year_expenses.html
@@ -7,7 +7,7 @@
             <th class="bl top"></th>
         </tr>
         <tr>
-            <th width="80rem" class="text-start">{{ year|title }}</th>
+            <th class="text-start w5">{{ year|title }}</th>
             {% for cat in categories %}<th>{{ cat }}</th>{% endfor %}
             <th class="bl">Viso</th>
         </tr>
