--- a/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
@@ -19,13 +19,20 @@
     <tbody>
         {% for item in accounts %}
         <tr>
-            <td data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right" title="{{ item.latest_check }}" class="text-start"><div style="position:relative;">{{ item.title }}<span style="position: absolute; top: -0.5px; right: 5px; display: block;"><button type="button" data-url="{% url 'bookkeeping:accounts_worth_reset' item.account_pk %}" class="btn btn-super-sm btn-outline-info reset">Reset</button></span></div></td>
-            {% cell item.past width='110rem' %}
-            {% cell item.incomes width='110rem' %}
-            {% cell item.expenses width='110rem' %}
-            {% cell item.balance width='110rem' %}
-            {% cell item.have width='110rem' css_class='bl' %}
-            {% cell item.delta width='110rem' highlight_value=True default_if_empty='ok' %}
+            <td data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right" title="{{ item.latest_check }}" class="text-start">
+                <div style="position:relative;">
+                    {{ item.title }}
+                    <span style="position: absolute; top: -0.5px; right: 5px; display: block;">
+                        <button type="button" data-url="{% url 'bookkeeping:accounts_worth_reset' item.account_pk %}" class="btn btn-super-sm btn-outline-info reset">Reset</button>
+                    </span>
+                </div>
+            </td>
+            {% cell item.past css_class='w7' %}
+            {% cell item.incomes css_class='w7' %}
+            {% cell item.expenses css_class='w7' %}
+            {% cell item.balance css_class='w7' %}
+            {% cell item.have css_class='bl w7' %}
+            {% cell item.delta css_class='w7' highlight_value=True default_if_empty='ok' %}
         </tr>
         {% endfor %}
     </tbody>
