--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -261,6 +261,46 @@ div[class*="col"] > h6 {
     text-align: left;
 }
 
+.stats .empty {
+    --bs-table-accent-bg: white!important;
+    border: 0!important;
+}
+
+.stats td.td_expand_day_expenses:hover {
+    --bs-table-accent-bg: none;
+}
+
+.table-danger {
+    font-weight: bold;
+}
+
+.table-danger.-full {
+    background-color: #fe536a;
+    font-weight: bold;
+}
+
+table.stats td.panel-heading {
+    padding: 0!important;
+    width: auto !important;
+    width: 2.4rem!important;
+    min-width: 2.4rem!important;
+}
+
+.panel-heading  a:before {
+    font-family: 'Glyphicons Halflings';
+    content: "\e114";
+    float: right;
+    transition: all 0.5s;
+    margin-left: .3rem!important;
+    color: #fe536a;
+}
+
+.panel-heading.active a:before {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+
 .w5 {
     width: 5rem!important;
 }
