--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -273,6 +273,10 @@ div[class*="col"] > h6 {
     width: 7rem!important;
 }
 
+.w7p {
+    width: 7%!important;
+}
+
 .w8 {
     width: 8rem!important;
 }
