--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lt">
   <head>
     <meta charset="utf-8">
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
