--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -3,6 +3,36 @@
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/css-loader.css' %}">
 <script src="{% static 'js/reload_stats.js' %}"></script>
+
+<style>
+    .badge {
+        padding: 0.25rem .25rem;
+        color: #004085;
+    }
+    .drinks {
+        background-color: #d9d9d9;
+    }
+    .fees {
+        background-color: #ffdddd;
+    }
+    .food {
+        background-color: #c5d9f1;
+    }
+    .leisure {
+        background-color: #c4d79b;
+    }
+    .work {
+        background-color: #fff0c1;
+    }
+    table.stats tr > td.expense-ordinary {
+        padding-left:.55rem!important;
+    }
+    table.stats tr > td.expense-exception {
+        padding-left:.4rem!important;
+        border-left: 5px solid red!important;
+    }
+</style>
+
 {% endblock head %}
 
 {% block content %}
